# zju_geo_sim_sdk

./: README.md
3rd/modification/: CMakeLists.txt
3rd/modification/HLBFGS/: CMakeLists.txt
3rd/modification/OpenFlipper/OpenFlipperLib/: CMakeLists.txt  README.TXT
3rd/modification/OpenFlipper/OpenFlipperLib/ACG/: CMakeLists.txt
3rd/modification/alglib/: CMakeLists.txt
3rd/modification/alglib/src/: CMakeLists.txt  alglibinternal.cpp  alglibmisc.cpp  ap.cpp  dataanalysis.cpp  diffequations.cpp  fasttransforms.cpp  integration.cpp  interpolation.cpp  optimization.cpp  solvers.cpp  specialfunctions.cpp  statistics.cpp
3rd/modification/alglib/tests/: CMakeLists.txt  main.cpp
3rd/modification/ann/: CMakeLists.txt
3rd/modification/ann/shared/: CMakeLists.txt
3rd/modification/ann/src/: ANN.cpp  bd_fix_rad_search.cpp  bd_pr_search.cpp  bd_search.cpp  bd_tree.h  kd_dump.cpp  kd_fix_rad_search.cpp  kd_pr_search.cpp  kd_pr_search.h  kd_search.cpp  kd_search.h  kd_tree.h  pr_queue.h  search_ctx.h
3rd/modification/ann/static/: CMakeLists.txt
3rd/modification/jama/: CMakeLists.txt
3rd/modification/laspack/: CMakeLists.txt
3rd/modification/laspack/laspack/: CMakeLists.txt
3rd/modification/laspack/xc/: CMakeLists.txt
3rd/modification/liblbfgs/: CMakeLists.txt
3rd/modification/mesquite-2.2.0/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
3rd/modification/mesquite-2.2.0/doc/: Makefile
3rd/modification/mesquite-2.2.0/itaps/: Makefile  Makefile.in
3rd/modification/mesquite-2.2.0/meshFiles/: Makefile  Makefile.in
3rd/modification/mesquite-2.2.0/src/: CMakeLists.txt  Makefile  Makefile.in
3rd/modification/mesquite-2.2.0/testSuite/: Makefile  Makefile.in
3rd/modification/mesquite-2.2.0/utils/: CMakeLists.txt  Makefile
3rd/modification/metis/: metis编译日志.txt
3rd/modification/metis/metis-cmake/: CMakeLists.txt
3rd/modification/qp/: CMakeLists.txt  README  configure.in  example.c  makefile.in  qld.f
3rd/modification/tnt/: CMakeLists.txt
3rd/modification/triangulation_2d/: CMakeLists.txt  triangle.cpp  triangle.h
3rd/modification/verdict/: CMakeLists.txt
3rd/modification/voro++-0.4.5/: config.mk
branches/JinHUANG/jtflib/mk_ptree/: CMakeLists.txt
branches/JinHUANG/zjucad/linear_solver/: CMakeLists.txt
branches/LSCOLib/ZherongPan/: CMakeLists.txt  direct_solver_kernel_common_file_pzr.h  direct_solver_kernel_zjucad_matrix.h  jacobi_eigenvalue.c  kernel_zjucad_matrix.h  kkt_preconditioner.h  krylov_matrix.h  main.cpp  pcg_solver.h  quartic_solver.c  quasi_newton_debug.h  trust_region_solver_2d_subspace.h  trust_region_solver_double_dogleg.h  trust_region_solver_steihuag_cg.h  util.h
branches/dzwlib/: CMakeLists.txt
branches/dzwlib/include/Common/: BaseData.h  MyException.h
branches/dzwlib/include/Geodesic/: geodesic_memory.h
branches/dzwlib/include/gmesh/: read_file.h
branches/dzwlib/src/CVT/: CMakeLists.txt  CvtInterface.cpp  CvtInterface.h
branches/dzwlib/src/Common/: BaseData.cpp  CMakeLists.txt  Complex.h  VectorOp.h
branches/dzwlib/src/Geodesic/: CMakeLists.txt  geodesic_algorithm_base.h  geodesic_algorithm_exact.h  geodesic_algorithm_graph_base.h  geodesic_interface.cpp  geodesic_interface.h  geodesic_matlab_api.cpp  geodesic_mesh.h
branches/dzwlib/src/MeshModel/: CMakeLists.txt  FeatureLine.cpp  FeatureLine.h  MeshModel.cpp  MeshModel.h
branches/dzwlib/src/gmesh/: CMakeLists.txt
branches/for_cy/hjlib/: CMakeLists.txt
branches/for_cy/hjlib/ANN_c/: ANN_c.cpp  CMakeLists.txt
branches/for_cy/hjlib/data_tree/: CMakeLists.txt
branches/for_cy/hjlib/function/: CMakeLists.txt
branches/for_cy/hjlib/geometry/: CMakeLists.txt
branches/for_cy/hjlib/half_edge/: CMakeLists.txt
branches/for_fxz/jtflib/: CMakeLists.txt
branches/for_fxz/jtflib/algorithm/: CMakeLists.txt
branches/for_fxz/jtflib/math/: CMakeLists.txt
branches/for_fxz/jtflib/mk_ptree/: main.cpp  mk_ptree.h
branches/for_fxz/jtflib/util/: CMakeLists.txt
branches/jtflib/: CMakeLists.txt
branches/jtflib/algorithm/: CMakeLists.txt
branches/jtflib/data_tree/include/: data_tree.h
branches/jtflib/data_tree/src/: CMakeLists.txt  io.cpp
branches/jtflib/function/examples/: CMakeLists.txt
branches/jtflib/function/include/: function.h
branches/jtflib/function/src/: convertion.cpp  func_aux.cpp  least_square.cpp
branches/jtflib/igl/include/: CMakeLists.txt
branches/jtflib/igl/src/: CMakeLists.txt  viewer_tet.cpp
branches/jtflib/math/: CMakeLists.txt
branches/jtflib/mesh/: CMakeLists.txt
branches/jtflib/mesh/include/: mesh.h  trimesh.h
branches/jtflib/mesh/src/: io.cpp  mesh.cpp  util.cpp
branches/jtflib/mk_ptree/: mk_ptree.cpp
branches/jtflib/optimizer/: CMakeLists.txt
branches/jtflib/optimizer/example/: qmr_test.cpp
branches/jtflib/optimizer/src/: lbfgs.h  optimizer.cpp  qmr.h
branches/jtflib/util/include/: vertex_connection.h
branches/sxxlib/tri_sub/: CMakeLists.txt  Edge.h  Property.h  Tri_face.h  Vertex.h  basic_define.cpp  basic_define.h  sxx_subdivision.cpp  sxx_subdivision.h  tri_subdivision.cpp  tri_subdivision.h
branches/zhangshengwei/: CMakeLists.txt
branches/zhangshengwei/optimizer/example/: CMakeLists.txt  main.cpp
branches/zhangshengwei/optimizer/include/: optimizer.h
branches/zhangshengwei/optimizer/src/: CMakeLists.txt  KKT.cpp  SQP.cpp  SQP.h  optimizer.cpp  petsc_ver.h  qmr.cpp
branches/zhangshengwei/sparse/include/: sparse.h
branches/zhangshengwei/zjucad/linear_solver/: CMakeLists.txt
branches/zhangshengwei/zjucad/optimizer/: CMakeLists.txt
trunk/hjlib/ANN_c/: CMakeLists.txt
trunk/hjlib/half_edge/: CMakeLists.txt
trunk/hjlib/half_edge/examples/: CMakeLists.txt
trunk/hjlib/half_edge/include/: builder.h  builder.hh  conf.h  half_edge_add_face.h  hj_symmetry_half_edge.h  operation.h  operation.hh
trunk/jtflib/data_tree/: CMakeLists.txt
trunk/jtflib/data_tree/sample/: CMakeLists.txt  main.cpp
trunk/jtflib/function/: CMakeLists.txt
trunk/jtflib/function/doc/: readme.tex
trunk/jtflib/function/include/: func_aux.h
trunk/jtflib/function/src/: neg_log.cpp
(+1398 files in other folders)
